# projeto_data_quality

./: README.md  pyproject.toml
app/: etl.py
docs/: index.md
